--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
         <div class="eye left"></div>
         <div class="eye right"></div>
     </div>
+
+    <h2>Step 4: Add the mouth</h2>
+    <div class="face">
+        <div class="eye left"></div>
+        <div class="eye right"></div>
+        <div class="mouth"></div>
+    </div>
+
+    <h2>Step 5: Fix the eyes</h2>
+    <div class="face">
+        <div class="eye left">
+        <div class="pupil"></div>
+    </div>
+        <div class="eye right">
+        <div class="pupil"></div>
+    </div>
+    <div class="mouth"></div>
+</div>
 </body>
 </html>
