--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         <div class="pupil"></div>
     </div>
     <div class="mouth"></div>
-</div>
+    </div>
+
+    <h2>Freestyle!</h2>
+    <div class="myface">
+        <div class="eyes leftOne">
+        <div class="pupils"></div>
+    </div>
+        <div class="eyes rightOne">
+        <div class="pupils"></div>
+    </div>
+    <div class="mouth"></div>
+    <div class="tongue"></div>
+    <div class="unibrow"></div>
+    </div>
 </body>
 </html>
